# pyfeat-utils

./: .gitignore  README.md  hello.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
docs/superpowers/plans/: 2026-07-10-package-cleanup.md
docs/superpowers/specs/: 2026-07-10-package-cleanup-design.md
src/pyfeat_utils/: AUs_translator.txt  __init__.py  cli.py  config.py  descriptive_statistics.py  esqueleto.txt  files.py  init.py  processing.py  pyfeat_processor.py  rascunho.py  statistics.py  template_config.json  trial_image.py  trial_video.py
src/pyfeat_utils/input_data/: config.json
tests/: test_cli.py  test_config.py  test_files.py  test_processing.py  test_statistics.py
tests/input_data/: config.json
tests/output_data/: output.csv
